--- a/hrms/src/components/PayroleSetup.css
+++ b/hrms/src/components/PayroleSetup.css
@@ -161,9 +161,11 @@ h3 {
     padding: 8px;
     border: 1px solid #ddd;
     border-radius: 4px;
-    min-width: 8px; 
+    width: 2px; 
 }
-
+#HRAP{
+  width: 30x;
+}
 .checkbox-group {
     display: flex;
     align-items: center;
