--- a/hrms/src/components/Navbar.css
+++ b/hrms/src/components/Navbar.css
@@ -1,4 +1,4 @@
-.navbar {
+/* .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -8,9 +8,9 @@
     
   }
   
-  .navbar-logo h1 {
-    color: #fff;
-    margin: 0;
+  .navbar-logo {
+    display: flex;
+    align-items: center; 
   }
   
   .navbar-links {
@@ -35,3 +35,92 @@
     color: #ccc;
   }
   
+  .logo-image {
+    height: 50px; 
+    width:100px;
+  }
+  
+  .logo-text {
+    color: white;
+    font-size: 24px; 
+    margin: 0; 
+  }
+  
+  .navbar-left,
+.navbar-right {
+  flex: 1;
+}
+
+.navbar-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex: 2; 
+} */
+
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: #333;
+  color: #fff;
+}
+
+.navbar-left,
+.navbar-center,
+.navbar-right {
+  display: flex;
+  align-items: center;
+}
+
+.navbar-left {
+  flex: 1;
+}
+
+.navbar-center {
+  flex: 2;
+  justify-content: center;
+}
+
+.navbar-right {
+  flex: 1;
+  justify-content: flex-end;
+}
+
+.app-logo {
+  max-height: 50px; /* Adjust as needed */
+  margin-right: 10px;
+}
+
+.app-name {
+  font-size: 1.5rem;
+  color: #fff; /* Adjust as needed */
+}
+
+.company-logo {
+  width: 80px;
+  max-height: 50px; /* Adjust as needed */
+  margin-right: 10px;
+}
+
+.company-name {
+  font-size: 1.5rem;
+  color: #fff; /* Adjust as needed */
+}
+
+.navbar-links {
+  display: flex;
+  list-style: none;
+}
+
+.navbar-links li {
+  margin-left: 20px;
+}
+
+.navbar-links a {
+  text-decoration: none;
+  color: #fff; /* Adjust as needed */
+  font-size: 1rem;
+}
