--- a/hrms/src/components/TimeSheetPage.css
+++ b/hrms/src/components/TimeSheetPage.css
@@ -78,3 +78,11 @@
 
          
 }
+
+.timesheet-table {
+  width: 100%;
+  /* height: 500px;   */
+  overflow-x: auto; 
+  overflow-y: auto; 
+  /* margin-top: 20px; */
+}
