--- a/hrms/src/components/EmployeeList.css
+++ b/hrms/src/components/EmployeeList.css
@@ -1,9 +1,11 @@
 .list-container {
-    width: 100%;
+    /* width: 100%; */
     height: 500px;  
     overflow-x: auto; 
     overflow-y: auto; 
     margin-top: 20px;
+    margin-left: 20px;
+    margin-right: 10px;
   }
   
   table {
