--- a/hrms/src/components/EmployeeSetupGrid.css
+++ b/hrms/src/components/EmployeeSetupGrid.css
@@ -1,12 +1,12 @@
 .table-gridcontainer {
-    width: 100%;
+    /* width: 100%; */
     height: 450px; 
     overflow-x: auto; 
     overflow-y: auto; 
     margin-top: 20px;
-    margin-left: 10px;
-    margin-right: 10px;
-    border-radius: 30px;
+    margin-left: 20px;
+    margin-right: 20px;
+    /* border-radius: 30px; */
   }
   
   .employee-gridtable {
