--- a/hrms/src/components/Home.css
+++ b/hrms/src/components/Home.css
@@ -1,8 +1,6 @@
-/* Home Page.CSS */
-
  .page-container {
     display: flex;
-    height: 100vh; /* Full height */
+    height: 100vh; 
   }
   
   .dashboard-box {
