--- a/hrms/src/styles/EmployeeList.css
+++ b/hrms/src/styles/EmployeeList.css
@@ -6,6 +6,7 @@
     margin-top: 20px;
     margin-left: 20px;
     margin-right: 10px;
+
   }
   
   table {
@@ -46,4 +47,15 @@
   
   .add-button:hover {
     background-color: #45a049;
+  }
+
+  th {
+    background-color: #f2f2f2;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+  }
+  
+  tbody tr {
+    background-color: #fff;
   }
