--- a/hrms/src/styles/Validation.css
+++ b/hrms/src/styles/Validation.css
@@ -14,8 +14,7 @@
   }
   
   .table-header {
-    background-color: #f5f5f5;
+    background-color: rgb(121, 117, 117);
     font-weight: bold;
   }
   
- 
